--- a/card/templates/card_list.html
+++ b/card/templates/card_list.html
@@ -3,11 +3,14 @@
 {% block title %}Card List{% endblock %}
 
 {% block content %}
-  <h2>Card List</h2>
+  <h1 class='mb-5'>Card List</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Remove Card</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block'>Remove Card</button>
   </form>
-  <a href="{% url 'home' %}">home</a>
+  <hr>
+  <div class='mt-3'>
+      <a href="{% url 'home' %}">home</a>
+  </div>
 {% endblock %}
