--- a/card/templates/card_registration.html
+++ b/card/templates/card_registration.html
@@ -3,10 +3,14 @@
 {% block title %}Card Registration{% endblock %}
 
 {% block content %}
-  <h2>Card Registration</h2>
+  <h1 class='mb-5'>Card Registration</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Add Card</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block'>Add Card</button>
   </form>
+  <hr>
+  <div class='mt-3'>
+      <a href="{% url 'home' %}">home</a>
+  </div>
 {% endblock %}
