--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,10 +3,14 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <h2>Login</h2>
+  <h1 class='mb-5'>Login</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" >Login</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block'>Login</button>
   </form>
+  <hr>
+  <div class='mt-3'>
+      <a href="{% url 'home' %}">home</a>
+  </div>
 {% endblock %}
