--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -3,10 +3,14 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-  <h2>Sign Up</h2>
+  <h1 class='mb-5'>Sign Up</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block'>Sign Up</button>
   </form>
+  <hr>
+  <div class='mt-3'>
+      <a href="{% url 'home' %}">home</a>
+  </div>
 {% endblock %}
