--- a/templates/card/card_list.html
+++ b/templates/card/card_list.html
@@ -4,13 +4,36 @@
 
 {% block content %}
   <h1 class='mb-5'>Card List</h1>
-  <form method="post">
+  <form method="post" id='remove-card-form'>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class='btn btn-primary btn-md btn-block'>Remove Card</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block' name="remove-card">Remove Card</button>
+    <button type="submit" class='btn btn-primary btn-md btn-block' name="edit-card" data-toggle="modal" data-target="#myModal">Edit Card</button>
   </form>
   <hr>
   <div class='mt-3'>
       <a href="{% url 'home' %}">home</a>
   </div>
+  
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" id="myModalLabel">Edit Card</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
+        <div class="modal-body">
+          <form method="post" id='edit-card-form'>
+            {% csrf_token %}
+            {{ form_edit.as_p }}
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" form='edit-card-form' name='save-change'>Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
