Updated CSS with Bootstrap and Changed DB Structuture

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,17 +9,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
-  <body class='bg-primary'>
-    <main>
-      <div class="container h-100 d-flex justify-content-center page-center" style="margin-top:15%; font-family:'Noto Sans JP', sans-serif;">
-        <div class="jumbotron my-auto text-center">
-          {% block content %}
-          {% endblock %}
+  <body class='text-center'>
+    <div class='cover-container d-flex h-100 p-3 flex-column' style="width:100%;">
+      <header class='masthead mb-auto'>
+        <div class='inner'>
+          <h3 class='masthead-brand'>PayWay</h3>
+          <nav class='nav nav-masthead justify-content-center' >
+            {% block nav-content %}
+            {% endblock %}
+          </nav>
         </div>
-      </div>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </main>
+      </header>
+      <main class='inner cover' role='main'>
+        <h1 class='cover-heading' >{% block page-title %}{% endblock %}</h1>
+          <p class='lead'>
+            {% block content %}
+            {% endblock %}
+          </p>
+      </main>
+      <footer class='mastfoot mt-auto'>
+
+      </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
