--- a/templates/card/card_list.html
+++ b/templates/card/card_list.html
@@ -2,6 +2,14 @@
 
 {% block title %}Card List{% endblock %}
 
+{% block nav-content %}
+    <a class='nav-link' href="{% url 'home' %}">Home</a>
+    <a class='nav-link' href="{% url 'addcard' %}">Register Card</a>
+    <a class='nav-link active' href="{% url 'removecard' %}">View Card</a>
+    <a class='nav-link' href="{% url 'create-purchase' %}">Create Purchase</a>
+    <a class='nav-link' href="{% url 'logout' %}">Logout</a>
+  {% endblock %}
+
 {% block content %}
   <h1 class='mb-5'>Card List</h1>
   <form method="post" id='remove-card-form'>
@@ -10,10 +18,6 @@
     <button type="submit" class='btn btn-primary btn-md btn-block' name="remove-card">Remove Card</button>
     <button type="submit" class='btn btn-primary btn-md btn-block' name="edit-card" data-toggle="modal" data-target="#myModal">Edit Card</button>
   </form>
-  <hr>
-  <div class='mt-3'>
-      <a href="{% url 'home' %}">home</a>
-  </div>
   
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
