--- a/templates/card/card_registration.html
+++ b/templates/card/card_registration.html
@@ -2,6 +2,14 @@
 
 {% block title %}Card Registration{% endblock %}
 
+{% block nav-content %}
+    <a class='nav-link' href="{% url 'home' %}">Home</a>
+    <a class='nav-link active' href="{% url 'addcard' %}">Register Card</a>
+    <a class='nav-link' href="{% url 'removecard' %}">View Card</a>
+    <a class='nav-link' href="{% url 'create-purchase' %}">Create Purchase</a>
+    <a class='nav-link' href="{% url 'logout' %}">Logout</a>
+  {% endblock %}
+
 {% block content %}
   <h1 class='mb-5'>Card Registration</h1>
   <form method="post">
@@ -9,8 +17,4 @@
     {{ form.as_p }}
     <button type="submit" class='btn btn-primary btn-md btn-block'>Add Card</button>
   </form>
-  <hr>
-  <div class='mt-3'>
-      <a href="{% url 'home' %}">home</a>
-  </div>
 {% endblock %}
