--- a/templates/purchase/create_purchase.html
+++ b/templates/purchase/create_purchase.html
@@ -2,6 +2,14 @@
 
 {% block title %}Card List{% endblock %}
 
+{% block nav-content %}
+    <a class='nav-link' href="{% url 'home' %}">Home</a>
+    <a class='nav-link' href="{% url 'addcard' %}">Register Card</a>
+    <a class='nav-link' href="{% url 'removecard' %}">View Card</a>
+    <a class='nav-link active' href="{% url 'create-purchase' %}">Create Purchase</a>
+    <a class='nav-link' href="{% url 'logout' %}">Logout</a>
+  {% endblock %}
+
 {% block content %}
     <h1 class='mb-5'>Create Purchase</h1>
         <form method="post" id='confirm-payment-form'>
@@ -9,10 +17,6 @@
             {{ form.as_p }}
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Confirm</button>
         </form>
-    <hr>
-    <div class='mt-3'>
-        <a href="{% url 'home' %}">home</a>
-    </div>
 
     <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm modal-dialog-centered">
