--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,12 @@
 
 {% block title %}Login{% endblock %}
 
+{% block nav-content %}
+    <a class='nav-link' href="{% url 'home' %}">Home</a>
+    <a class='nav-link active' href="{% url 'login' %}">Login</a>
+    <a class='nav-link' href="{% url 'signup' %}">Signup</a>
+{% endblock %}
+
 {% block content %}
   <h1 class='mb-5'>Login</h1>
   <form method="post">
@@ -9,8 +15,4 @@
     {{ form.as_p }}
     <button type="submit" class='btn btn-primary btn-md btn-block'>Login</button>
   </form>
-  <hr>
-  <div class='mt-3'>
-      <a href="{% url 'home' %}">home</a>
-  </div>
 {% endblock %}
